fix z index of login container to be behind map

--- a/styles/container.scss
+++ b/styles/container.scss
@@ -98,7 +98,7 @@ $logo-font: "Barlow Condensed", sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1000;
+  z-index: 1;
 }
 
 .map-form-container {
