--- a/styles/map.scss
+++ b/styles/map.scss
@@ -2,5 +2,5 @@
   height: 90vh;
   width: 100vw;
   margin-top: 10vh;
-  z-index: 0;
+  z-index: 10;
 }
